# fontquant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
Lib/fontquant/: README.md
fontquant-cli/: Cargo.toml
fontquant-cli/src/: main.rs
fontquant-lib/: Cargo.toml
fontquant-lib/src/: bezglyph.rs  error.rs  lib.rs  monkeypatching.rs
fontquant-lib/src/helpers/: mod.rs  shaping.rs
fontquant-lib/src/quantifiers/: casing.rs  features.rs  mod.rs  numerals.rs  parametric.rs
fontquant-lib/src/quantifiers/appearance/: metrics.rs  mod.rs  stats.rs  stencil.rs  storys.rs  strokecontrast.rs
fontquant-py/: Cargo.toml  pyproject.toml
fontquant-py/python/fontquant/: __init__.py  cli.py
fontquant-py/python/fontquant/helpers/: settings.py
fontquant-py/src/: lib.rs
fontquant-web/: Cargo.toml
fontquant-web/src/: lib.rs
fontquant-web/www/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fontquant-web/www/src/: main.ts
tests/: test_all.py
