[package]
name = "fontquant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
fontquant-lib = { path = "../fontquant-lib" }
font-types = "0.11.0"
read-fonts = "0.37.0"
write-fonts = "0.41.0"
skrifa = "0.40.0"
log = { workspace = true }
indicatif = { version = "0.17.11", features = ["rayon"] }
rayon = "1.10.0"
