[package]
name = "fontquant-lib"
description = "Quantifiable data processor for fonts"
readme = "../README.md"

version = "0.1.1"
edition = "2024"

license-file = "../LICENSE"
repository = "https://github.com/googlefonts/fontquant"

[dependencies]
itertools = { workspace = true }
font-types = { workspace = true }
read-fonts = { workspace = true }
write-fonts = { workspace = true }
skrifa = { workspace = true }
thiserror = { workspace = true }
unicode-script = { workspace = true }
log = { workspace = true }
kurbo = { workspace = true }
statistical = "1.0.0"
unicode-properties = "0.1.3"
linesweeper = "0.3.0"

[dev-dependencies]
skia-safe = "0.93.0"
