[package]
name = "fontquant-py"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fontquant"
crate-type = ["cdylib"]

[dependencies]
fontquant-lib = { path = "../fontquant-lib" }
pyo3 = "0.25.1"
pythonize = "0.25.0"
fontations = { workspace = true }
